--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.8",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.446.0",
     "next": "^15.0.3",
     "next-themes": "^0.2.1",
@@ -60,6 +62,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-pdf": "^9.1.1",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -70,5 +73,8 @@
     "undici": "^5.28.3",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/jspdf": "^1.3.3"
   }
 }
