--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
@@ -62,6 +63,7 @@
     "lucide-react": "^0.446.0",
     "next": "^15.0.3",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.16",
     "postcss": "^8.4.49",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
