--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/jspdf": "^1.3.3"
+    "@types/jspdf": "^1.3.3",
+    "@types/nodemailer": "^6.4.17"
   }
 }
